# handle_ICU

./: .gitignore  README.md
APP_TEST_ONPC/: Handle_Startup_GUI  Temp_GUI  config.ini  main.sh  style.qss  uart_server
DATA_U/system/: .goutputstream-24UW7Y  .goutputstream-B1JR7Y  ECG_GUI  ECG_HX_GUI  Handle_Startup_GUI  MPU_GUI  Temp_GUI  config.ini  key  key.sh  key_server  kill.sh  main.sh  reset.sh  rev_server  style.qss  uart_server
GUI_ECG/: GUI_ECG.pro  filter.cpp  findpeaks.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_cvs.cpp  sys.cpp  sys.h  timers.cpp
GUI_HX_ECG/: GUI_HX_ECG.pro  findpeaks.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_cvs.h  sys.cpp  sys.h  timers.cpp
GUI_MPU/: GUI_MPU.pro  filter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapminmax.cpp  mapminmax.h  sys.cpp  sys.h  timers.cpp
Handle_Startup_GUI/: Handle_Startup_GUI.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_ini.cpp  my_ini.h  sys.cpp  sys.h
Handle_code/: .mxproject  Handheld terminal code v1.1.ioc  Handheld terminal code v1.1.txt  ReadMe.txt
Temp_GUI /: Temp_GUI.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  style.qss
Wearable_code/: .mxproject  Wearable_code.ioc
handle_tools/: CMakeLists.txt  virtualCOM.py
handle_tools/backup/: rev.c  uart.c
handle_tools/src/: CMakeLists.txt  key_server_main.c  my_msg.c  my_msg.h  my_uart.c  my_uart.h  uart_server_main.c
outputs/: Cute7_GUI  config.ini  uart_4418
tools/: build.sh  build_boot.sh  build_root.sh  make_ext4fs  pack.sh  tools.sh
tools/boot/: uImage
(+579 files in other folders)
